--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
   },
   "devDependencies": {
     "eslint": "^6.7.2",
+    "jest": "^24.9.0",
+    "mock-fs": "^4.10.4",
     "prettier": "^1.19.1"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
