--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alacritty-theme-switch",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "CLI for Alacritty color theme and configuration switching.",
   "main": "./src/index.js",
   "bin": "./src/cli.js",
@@ -8,6 +8,12 @@
     "name": "Michael Tichopád",
     "email": "michael@tichopad.dev"
   },
+  "contributors": [
+    {
+      "name": "Guilherme Henrique",
+      "email": "gjhenrique@gmail.com"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tichopad/alacritty-theme-switch.git"
