--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
       "email": "gjhenrique@gmail.com"
     }
   ],
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tichopad/alacritty-theme-switch.git"
@@ -40,18 +43,18 @@
     "prepublish": "npm run format && npm run lint && npm run test"
   },
   "dependencies": {
-    "chalk": "^3.0.0",
+    "chalk": "^4.1.0",
     "deepmerge": "^4.2.2",
-    "fs-extra": "^8.1.0",
-    "inquirer": "^7.0.0",
-    "jest": "^25.1.0",
-    "js-yaml": "^3.13.1",
+    "fs-extra": "^9.0.1",
+    "inquirer": "^7.3.3",
+    "jest": "^26.4.1",
+    "js-yaml": "^3.14.0",
     "klaw-sync": "^6.0.0",
-    "meow": "^6.0.0"
+    "meow": "^7.1.0"
   },
   "devDependencies": {
-    "eslint": "^6.7.2",
-    "mock-fs": "^4.10.4",
-    "prettier": "^1.19.1"
+    "eslint": "^7.7.0",
+    "mock-fs": "^4.13.0",
+    "prettier": "^2.0.5"
   }
 }
