--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,8 +10,8 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  Build:
+    name: Build and test
     runs-on: ubuntu-latest
 
     strategy:
