--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,9 +5,14 @@ name: Tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
+    paths-ignore:
+      - '**.md'
+
   pull_request:
-    branches: [ master ]
+    branches: [master]
+    paths-ignore:
+      - '**.md'
 
 jobs:
   Build:
@@ -19,16 +24,16 @@ jobs:
         node-version: [10.x, 12.x, 14.x]
 
     steps:
-    - name: Begin CI
-      uses: actions/checkout@v2
+      - name: Begin CI
+        uses: actions/checkout@v2
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Clean install
-      run: npm ci
+      - name: Clean install
+        run: npm ci
 
-    - name: Lint, formatting and test
-      run: npm test
+      - name: Lint, formatting and test
+        run: npm test
