--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "fix:format": "npm run format -- --write",
     "fix:lint": "npm run lint -- --fix",
     "format": "prettier \"src/**/*.js\" \"__tests__/**/*.js\"",
-    "lint": "eslint \"src/**/*.js\" \"__tests__/**/*.js\""
+    "lint": "eslint \"src/**/*.js\" \"__tests__/**/*.js\"",
+    "precommit": "run-p fix:* test:unit"
   },
   "dependencies": {
     "chalk": "^4.1.0",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "eslint": "^7.7.0",
+    "husky": "^4.2.5",
     "jest": "^26.4.2",
     "mock-fs": "^4.13.0",
     "npm-run-all": "^4.1.5",
