--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ltd/j-toml": "^1.38.0",
     "deepmerge": "^4.2.2",
     "fs-extra": "^10.0.0",
     "inquirer": "^8.0.0",
