Update maintainers + git rule

--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     {
       "name": "Knosence",
       "email": "nadario.seays@gmail.com"
+    },
+    {
+      "name": "Kristjan Komloši",
+      "email": "kristjan.komlosi@gmail.com"
     }
   ],
   "engines": {
