--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,11 +2,11 @@ name: Tests
 
 on:
   push:
-    branches: [master]
+    branches: [main]
     paths-ignore:
       - '**.md'
   pull_request:
-    branches: [master]
+    branches: [main]
     paths-ignore:
       - '**.md'
 
