Fix publish workflow branch reference
Changed the checkout ref from 'master' to 'main' in the publish workflow to match the repository's default branch.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Begin CI
         uses: actions/checkout@v4
         with:
-          ref: master
+          ref: main
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
