--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,11 @@ on:
         description: 'Tag to publish (leave empty to use latest tag)'
         required: false
         type: string
+      beta:
+        description: 'Publish as beta (npm --tag=beta)'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   build:
@@ -43,17 +48,31 @@ jobs:
         with:
           node-version: 22
           registry-url: https://registry.npmjs.org/
-      - name: Get tag name
+      - name: Get tag name and determine npm tag
         id: get_tag
         run: |
           if [ "${{ github.event_name }}" = "release" ]; then
             echo "tag=${{ github.event.release.tag_name }}" >> $GITHUB_OUTPUT
+            # Check if release is a pre-release
+            if [ "${{ github.event.release.prerelease }}" = "true" ]; then
+              echo "npm_tag=beta" >> $GITHUB_OUTPUT
+            else
+              echo "npm_tag=latest" >> $GITHUB_OUTPUT
+            fi
           elif [ -n "${{ inputs.tag }}" ]; then
             echo "tag=${{ inputs.tag }}" >> $GITHUB_OUTPUT
+            # Check if beta flag is set for manual trigger
+            if [ "${{ inputs.beta }}" = "true" ]; then
+              echo "npm_tag=beta" >> $GITHUB_OUTPUT
+            else
+              echo "npm_tag=latest" >> $GITHUB_OUTPUT
+            fi
           else
             # Get the latest tag
             latest_tag=$(git describe --tags --abbrev=0)
             echo "tag=$latest_tag" >> $GITHUB_OUTPUT
+            # Default to latest for auto-detected tags
+            echo "npm_tag=latest" >> $GITHUB_OUTPUT
           fi
       - name: Bump version
         run: |
@@ -64,6 +83,6 @@ jobs:
       - name: Clean install
         run: npm ci
       - name: Publish to NPM
-        run: npm publish --provenance --access public
+        run: npm publish --provenance --access public --tag=${{ steps.get_tag.outputs.npm_tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
