Fix GitHub Actions permissions for version bump
Added contents: write permission and GITHUB_TOKEN to allow the workflow to push version bump commits back to the repository. This resolves the 403 permission denied error when trying to push after npm version command.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,13 +36,14 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       id-token: write
     steps:
       - name: Begin CI
         uses: actions/checkout@v4
         with:
           ref: main
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
