Refactor towards a class-based theme manager

--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,8 @@
   "version": "3.0.0",
   "tasks": {
     "dev": "deno run -A --watch ./src/main.ts",
-    "run": "deno run -A ./src/main.ts"
+    "run": "deno run -A ./src/main.ts",
+    "test": "deno test -A"
   },
   "exports": "./src/cli.ts",
   "imports": {
