--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "alacritty-theme-switch",
-  "version": "3.0.0",
+  "version": "3.0.0-beta.1",
   "tasks": {
     "dev": "deno run -A --watch ./src/main.ts",
     "run": "deno run -A ./src/main.ts",
@@ -11,6 +11,7 @@
     "@std/assert": "jsr:@std/assert@1.0.13",
     "@std/cli": "jsr:@std/cli@1.0.21",
     "@std/fs": "jsr:@std/fs@1.0.19",
+    "@std/path": "jsr:@std/path@^1.1.2",
     "@std/toml": "jsr:@std/toml@1.0.8"
   }
 }
