Add JSR publish workflow

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "name": "alacritty-theme-switch",
   "version": "3.0.0-beta.1",
+  "license": "MIT",
   "tasks": {
     "dev": "deno run -A --watch ./src/main.ts",
     "run": "deno run -A ./src/main.ts",
