Add missing package scope

--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
-  "name": "alacritty-theme-switch",
+  "name": "@tichopad/alacritty-theme-switch",
   "version": "3.0.0-beta.1",
   "license": "MIT",
   "tasks": {
