Debug NPM build pipeline

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -78,12 +78,10 @@ jobs:
           jq '.version = "${{ steps.version_info.outputs.version }}"' deno.json > deno.json.tmp
           mv deno.json.tmp deno.json
           cat deno.json
-          git add deno.json
-          git commit -m "Bump version to ${{ steps.version_info.outputs.version }}"
-          git push
+          # git add deno.json
+          # git commit -m "Bump version to ${{ steps.version_info.outputs.version }}"
+          # git push
 
-      - name: Publish to JSR
-        run: npx jsr publish
 
       - name: Build Node-compatible package
         run: deno task build-npm
@@ -94,3 +92,6 @@ jobs:
         run: |
           cd npm
           npm publish --provenance --access public --tag=${{ steps.version_info.outputs.npm_tag }}
+
+      - name: Publish to JSR
+        run: npx jsr publish
