--- a/deno.json
+++ b/deno.json
@@ -8,11 +8,11 @@
     "run": "deno run --allow-write --allow-env --allow-read ./src/main.ts",
     "test": "deno test --allow-write --allow-env --allow-read ./tests/unit",
     "build-npm": "deno run --allow-read --allow-write --allow-net --allow-env --allow-run scripts/build-npm.ts",
-    "build-binary": "deno compile --allow-write --allow-env --allow-read --output=ats ./src/main.ts"
+    "build-binary": "deno compile --allow-write --allow-env --allow-read --output=bin/ats ./src/main.ts"
   },
   "exports": "./src/main.ts",
   "imports": {
-    "@deno/dnt": "jsr:@deno/dnt@0.42.3",
+    "@deno/dnt": "jsr:@tichopad/dnt@1.0.1",
     "@inquirer/search": "npm:@inquirer/search@3.1.1",
     "@std/assert": "jsr:@std/assert@1.0.13",
     "@std/cli": "jsr:@std/cli@1.0.21",
