Add GitHub client for downloading Alacritty themes
Implemented a GitHub client module that allows downloading theme files from remote repositories. The client uses GitHub's REST API to list and download TOML theme files.

Key features:
- Parse GitHub repository URLs (HTTPS and SSH formats)
- List all TOML theme files in a repository
- Download individual themes or all themes at once
- Comprehensive error handling using Result/ResultAsync pattern
- Full test coverage with mocked GitHub API responses

Also updated AGENTS.md to clarify module organization guidelines, specifically discouraging the use of barrel export files (index.ts) in favor of direct imports from specific module files.

--- a/deno.json
+++ b/deno.json
@@ -18,6 +18,7 @@
     "@std/cli": "jsr:@std/cli@1.0.21",
     "@std/fs": "jsr:@std/fs@1.0.19",
     "@std/path": "jsr:@std/path@1.1.2",
+    "@std/testing": "jsr:@std/testing@1.0.15",
     "@std/toml": "jsr:@std/toml@1.0.8"
   }
 }
