Implemented download-themes command for fetching themes from GitHub
Added complete implementation of the download-themes command that allows users to download Alacritty theme files from GitHub repositories. The command downloads themes from the official Alacritty themes repository by default, with options to customize the source repository and git reference.

Key changes:

- Implemented downloadThemesCommand in src/commands/download-themes.ts with progress bar support
- Enhanced GitHubClient to download theme files directly from raw.githubusercontent.com, bypassing API rate limits
- Added support for custom git references (branches, tags, commits) via --ref/-r flag
- Updated CLI to handle download-themes subcommand with proper argument parsing
- Added --allow-net permission to all relevant deno tasks for network access
- Improved unslugify utility to properly uppercase Roman numerals (I-X) in theme names
- Added comprehensive unit tests for download-themes command and updated GitHub client tests
- Updated README with Quick Start section demonstrating the download-themes feature
- Enhanced AGENTS.md with testing guidelines and documentation sources
- Removed outdated OVERVIEW.md documentation
- Fixed build-npm script to disable type checking for Node.js compatibility

--- a/deno.json
+++ b/deno.json
@@ -4,11 +4,11 @@
   "license": "MIT",
   "tasks": {
     "check": "deno fmt --check && deno lint && deno check",
-    "dev": "deno run --allow-write --allow-env --allow-read --watch ./src/main.ts",
-    "run": "deno run --allow-write --allow-env --allow-read ./src/main.ts",
+    "dev": "deno run --allow-write --allow-env --allow-read --allow-net --watch ./src/main.ts",
+    "run": "deno run --allow-write --allow-env --allow-read --allow-net ./src/main.ts",
     "test": "deno test --allow-write --allow-env --allow-read ./tests/unit",
     "build-npm": "deno run --allow-read --allow-write --allow-net --allow-env --allow-run scripts/build-npm.ts",
-    "build-binary": "deno compile --allow-write --allow-env --allow-read --output=bin/ats ./src/main.ts"
+    "build-binary": "deno compile --allow-write --allow-env --allow-read --allow-net --output=bin/ats ./src/main.ts"
   },
   "exports": "./src/main.ts",
   "imports": {
