Fix version bump

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -83,7 +83,7 @@ jobs:
           cat deno.json
           git add deno.json
           git commit -m "Bump version to ${{ steps.version_info.outputs.version }}"
-          git push
+          git push origin main
 
       - name: Build Node-compatible package
         run: deno task build-npm
