--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -110,13 +110,13 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             output: ats-linux-x86_64
-          - os: macos-latest
+          - os: ubuntu-latest
             target: x86_64-apple-darwin
             output: ats-darwin-x86_64
-          - os: macos-latest-xlarge
+          - os: ubuntu-latest
             target: aarch64-apple-darwin
             output: ats-darwin-aarch64
-          - os: windows-latest
+          - os: ubuntu-latest
             target: x86_64-pc-windows-msvc
             output: ats-windows-x86_64.exe
     steps:
