Migrate from custom Result implementation to neverthrow library
Replaced custom Result/ResultAsync implementation with the battle-tested neverthrow library to improve type safety and reduce maintenance burden.

Key changes:

- Added neverthrow and p-map dependencies
- Removed custom Result/ResultAsync implementation
- Refactored all error handling to use neverthrow's Result/ResultAsync types
- Reorganized utility modules for better separation of concerns:
  - Created fs-utils.ts, toml-utils.ts, string-utils.ts, theme-utils.ts
  - Moved error types closer to their usage (fs-errors.ts, toml-errors.ts)
- Improved GitHub client implementation:
  - Added concurrent theme downloads using p-map (10 concurrent downloads)
  - Simplified license file download logic
  - Better error handling with specific error types
- Updated ThemeManager API to use neverthrow patterns (andThen, map, mapErr)
- Added comprehensive neverthrow documentation for reference
- Renamed deno task 'fix' to 'preflight' (includes fmt, lint, check, test)
- Removed completed TODO item about creating themes directory

Breaking changes:
- All Result/ResultAsync APIs now use neverthrow's methods (andThen instead of flatMap)
- Error types have been reorganized into domain-specific modules

--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
   "version": "3.0.0-rc.5",
   "license": "MIT",
   "tasks": {
-    "fix": "deno fmt && deno lint",
+    "preflight": "deno fmt && deno lint && deno check && deno task test",
     "check": "deno fmt --check && deno lint && deno check",
     "dev": "deno run --allow-write --allow-env --allow-read --allow-net --watch ./src/main.ts",
     "run": "deno run --allow-write --allow-env --allow-read --allow-net ./src/main.ts",
@@ -20,6 +20,8 @@
     "@std/fs": "jsr:@std/fs@1.0.19",
     "@std/path": "jsr:@std/path@1.1.2",
     "@std/testing": "jsr:@std/testing@1.0.15",
-    "@std/toml": "jsr:@std/toml@1.0.8"
+    "@std/toml": "jsr:@std/toml@1.0.8",
+    "neverthrow": "npm:neverthrow@8.2.0",
+    "p-map": "npm:p-map@7.0.3"
   }
 }
