--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -157,3 +157,16 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload ${{ steps.release_tag.outputs.tag }} ${{ matrix.output }} --clobber
+
+  e2e-smoke-test:
+    name: E2E Smoke Test
+    runs-on: ubuntu-latest
+    needs: build-binaries
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+
+      - name: Run E2E smoke test
+        run: |
+          chmod +x tests/e2e-smoke-test.sh
+          ./tests/e2e-smoke-test.sh
