--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,35 +16,20 @@ on:
         default: false
 
 jobs:
-  publish:
-    name: Publish to NPM and JSR
+  checks-and-tests:
+    name: Run checks and tests
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      id-token: write
+    outputs:
+      version: ${{ steps.version_info.outputs.version }}
+      npm_tag: ${{ steps.version_info.outputs.npm_tag }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
-        with:
-          ref: main
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Deno
         uses: denoland/setup-deno@v2
         with:
           deno-version: v2.5.x
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v5
-        with:
-          node-version: 24
-          registry-url: https://registry.npmjs.org/
-
-      - name: Run checks
-        run: deno task check
-
-      - name: Run tests
-        run: deno task test
 
       - name: Determine version and npm tag
         id: version_info
@@ -73,17 +58,48 @@ jobs:
             exit 1
           fi
           echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "Using version: $VERSION"
+          echo "Publishing version: $VERSION (npm tag: $([ '${{ github.event.release.prerelease }}' = 'true' ] || [ '${{ inputs.beta }}' = 'true' ] && echo 'beta' || echo 'latest'))"
+
+      - name: Run checks
+        run: deno task check
+
+      - name: Run tests
+        run: deno task test
+
+  publish:
+    name: Publish to NPM and JSR (${{ needs.checks-and-tests.outputs.version }}${{ needs.checks-and-tests.outputs.npm_tag == 'beta' && ' [beta]' || '' }})
+    runs-on: ubuntu-latest
+    needs: checks-and-tests
+    permissions:
+      contents: write
+      id-token: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+        with:
+          ref: main
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup Deno
+        uses: denoland/setup-deno@v2
+        with:
+          deno-version: v2.5.x
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v5
+        with:
+          node-version: 24
+          registry-url: https://registry.npmjs.org/
 
       - name: Bump deno.json version
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          jq '.version = "${{ steps.version_info.outputs.version }}"' deno.json > deno.json.tmp
+          jq '.version = "${{ needs.checks-and-tests.outputs.version }}"' deno.json > deno.json.tmp
           mv deno.json.tmp deno.json
           cat deno.json
           git add deno.json
-          git commit -m "Bump version to ${{ steps.version_info.outputs.version }}"
+          git commit -m "Bump version to ${{ needs.checks-and-tests.outputs.version }}"
           git push origin main
 
       - name: Build Node-compatible package
@@ -94,14 +110,15 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           cd npm
-          npm publish --provenance --access public --tag=${{ steps.version_info.outputs.npm_tag }}
+          npm publish --provenance --access public --tag=${{ needs.checks-and-tests.outputs.npm_tag }}
 
       - name: Publish to JSR
         run: npx jsr publish
 
   build-binaries:
-    name: Build and upload binaries
+    name: Build and upload binaries (${{ needs.checks-and-tests.outputs.version }}${{ needs.checks-and-tests.outputs.npm_tag == 'beta' && ' [beta]' || '' }})
     runs-on: ${{ matrix.os }}
+    needs: checks-and-tests
     permissions:
       contents: write
     strategy:
@@ -159,12 +176,19 @@ jobs:
           gh release upload ${{ steps.release_tag.outputs.tag }} ${{ matrix.output }} --clobber
 
   e2e-smoke-test:
-    name: E2E Smoke Test
+    name: E2E smoke test (${{ needs.checks-and-tests.outputs.version }}${{ needs.checks-and-tests.outputs.npm_tag == 'beta' && ' [beta]' || '' }})
     runs-on: ubuntu-latest
-    needs: build-binaries
+    needs:
+      - checks-and-tests
+      - build-binaries
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
+
+      - name: Wait for binaries to be available
+        run: |
+          echo "Waiting 5 seconds to ensure binaries are fully uploaded and available..."
+          sleep 5
 
       - name: Run E2E smoke test
         run: |
